'simps_of_case' now print results like 'theorem'.

* Sledgehammer
  - Update/rebuild of bundled provers:
    . E prover 3.0, with native ARM64 executables
    . Vampire 4.8 HO - Sledgehammer schedules (2023-10-19)
    . veriT 2021.06.1-rmx - rebuild for arm64-linux
    . Z3 4.4.1 for arm64-linux has been removed: unreliable, unstable.
  - New implementation of moura tactic. INCOMPATIBILITY.

* Mirabelle:
  - Removed proof reconstruction from "sledgehammer" action;
    the related option "proof_method" was removed. Proof reconstruction is
    supported directly by Sledgehammer and should be used instead. For
    more information, see Sledgehammer's documentation relating to
    "preplay_timeout". INCOMPATIBILITY.
  - Added the action "order" testing the proof method of the same name.

* Explicit type class for discrete_linear_ordered_semidom for integral
semidomains with a discrete linear order.

* Type class linordered_euclidean_semiring replaces the (rather
technical) type class unique_euclidean_semiring_with_nat; type class
unique_euclidean_ring_with_nat, which barely admits instances other than
isomorphic to int, is discontinued; type class
unique_euclidean_semiring_with_bit_operations is renamed to
linordered_euclidean_semiring_bit_operations. Minor INCOMPATIBILITY.

* Streamlined specification of type class (semi)ring_parity. Minor
INCOMPATIBILITY.

* Lemma even_succ_div_2 renamed to even_half_succ_eq. Minor
INCOMPATIBILITY.

* Theory "HOL.Relation":
  - Added lemmas.
      antisymp_on_image
      asymp_on_image
      irreflp_on_image
      reflp_on_image
      symp_on_image
      totalp_on_image
      transp_on_image

* Theory "HOL.Transitive_Closure":
  - Renamed lemma antisymp_on_reflcp to antisymp_on_reflclp.
    Minor INCOMPATIBILITY.
  - Added lemmas.
      antisym_on_reflcl_if_asym_on
      antisymp_on_reflclp_if_asymp_on
      order_reflclp_if_transp_and_asymp
      reflclp_greater_eq[simp]
      reflclp_less_eq[simp]
      relpow_left_unique